--- a/negrucoin/main/templates/main/base.html
+++ b/negrucoin/main/templates/main/base.html
@@ -22,7 +22,7 @@
         <div class="container">
             <div class="header__body">
                 <a href="{% url 'index' %}" class="header__logo">
-                    <img src="{% static 'main/logo.png' %}" alt="">
+                    <img src="{% static 'main/new_logo.png' %}" alt="">
                 </a>
                 <div class="header__burger">
                     <span></span>
