--- a/negrucoin/main/templates/main/index.html
+++ b/negrucoin/main/templates/main/index.html
@@ -4,6 +4,6 @@
 {% block title %}Главная - Negrucoin{% endblock %}
 
 {% block body %}
-    <img src="{% static 'main/logo.png' %}" alt="">
+    <img class="logo_img" src="{% static 'main/new_logo.png' %}" alt="">
     <h1>Negrucoin - Фановый сайт для пассивного заработка!</h1>
 {% endblock %}
