--- a/negrucoin/main/templates/main/index.html
+++ b/negrucoin/main/templates/main/index.html
@@ -1,7 +1,7 @@
 {% extends 'main/base.html' %}
 {% load static %}
 
-{% block title %}Главная - Negrucoin{% endblock %}
+{% block title %}Главная{% endblock %}
 
 {% block body %}
     <img class="logo_img" src="{% static 'main/new_logo.png' %}" alt="">
