Rebranding project to investment and replace CRLF to LF

--- a/negrucoin/main/templates/main/index.html
+++ b/negrucoin/main/templates/main/index.html
@@ -4,6 +4,7 @@
 {% block title %}Главная{% endblock %}
 
 {% block body %}
-    <img class="logo_img" src="{% static 'main/new_logo.png' %}" alt="">
+    <img class="logo_img" src="{% static 'main/what-about-this.png' %}" alt="">
     <h1>Negrucoin - Фановый сайт для пассивного заработка!</h1>
+    <h2>Копите коины, торгуйте акциями на игровой бирже и обменивайте коины на реальные деньги.</h2>
 {% endblock %}
