--- a/negrucoin/main/static/main/css/header.css
+++ b/negrucoin/main/static/main/css/header.css
@@ -122,6 +122,21 @@
     z-index: 5;
     margin: 0 10px;
 }
+.user__money {
+    margin: auto 0.75vw;
+    color: #fff;
+    font-weight: bold;
+    display: flex;
+}
+.user__money:after {
+    content: "";
+    background-color: #e4ce1f;
+    display: block;
+    width: 1vw;
+    height: 1vw;
+    border-radius: 50%;
+    margin: auto 5px;
+}
 .user_button {
     padding: 7px;
     background-color: #fff;
