--- a/negrucoin/main/static/main/css/header.css
+++ b/negrucoin/main/static/main/css/header.css
@@ -189,6 +189,22 @@
 .overlay.active {
     display: block;
 }
+.user__balance {
+    color: #fff;
+    display: flex;
+}
+.pc {
+    display: none;
+}
+.pc_flex {
+    display: none;
+}
+.mobile {
+    display: none;
+}
+.mobile_flex {
+    display: none;
+}
 
 @media (max-width: 768px) {
     .header__menu {
@@ -207,6 +223,16 @@
     }
     .user__menu.active {
         right: -30%;
+    }
+    .user__money:after {
+        width: 1vh;
+        height: 1vh;
+    }
+    .mobile {
+        display: block;
+    }
+    .mobile_flex {
+        display: flex;
     }
 }
 
@@ -261,6 +287,12 @@
     }
     .user__link {
         font-size: 2.5vh;
+    }
+    .pc {
+        display: block;
+    }
+    .pc_flex {
+        display: flex;
     }
 }
 
