--- a/negrucoin/main/templates/main/base.html
+++ b/negrucoin/main/templates/main/base.html
@@ -50,7 +50,9 @@
 
                 <div class="header__login">
                     {% if request.user.is_authenticated %}
-                        <div class="user__money">{{ request.user.client.calculate_money }}</div>
+                        <div class="user__balance pc_flex">
+                            <div class="user__money">{{ request.user.client.calculate_money }}</div>
+                        </div>
                         <div class="user_button"><i class="fa-solid fa-user"></i></div>
                     {% else %}
                         <a href="{% url 'login' %}" class="basic_button">Войти</a>
@@ -61,6 +63,12 @@
                 {% if request.user.is_authenticated %}
                     <nav class="user__menu">
                         <ul class="user__list">
+                            <li>
+                                <div class="user__balance mobile_flex">
+                                    Баланс:
+                                    <div class="user__money">{{ request.user.client.calculate_money }}</div>
+                                </div>
+                            </li>
                             <li>
                                 <a href="#" class="user__link">Профиль</a>
                             </li>
